trying puts and charge of users image
projects DONE

--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
@@ -95,7 +95,7 @@
 							</div>
 							<div class="panel-body">
 								<form class="form-horizontal" role="form" method='post' 
-									action="/admin/AddProject/create">
+									action="/admin/AddProject/create" enctype="multipart/form-data">
 									<div class="form-group">
 										<label for="inputEmail3" class="col-sm-2 control-label">Nombre
 											del proyecto</label>
@@ -154,7 +154,7 @@
 											proyecto</label>
 										<div class="col-md-10">
 											<input type="file" class="btn btn-default"
-												id="exampleInputFile1" name="image">
+												id="exampleInputFile1" name="imagen">
 											<p class="help-block"></p>
 										</div>
 									</div>
