--- a/WADWolfram/src/main/resources/templates/login.html
+++ b/WADWolfram/src/main/resources/templates/login.html
@@ -106,7 +106,7 @@
                                 <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" tabindex="4">
                             </div>
                             <div class="form-group">
-                                <input type="password" name="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Contraseña">
+                                <input type="password" name="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Contraseña" tabindex="4">
                             </div>
 
                             <div class="row">
