--- a/WADWolfram/src/main/resources/templates/projects_template.html
+++ b/WADWolfram/src/main/resources/templates/projects_template.html
@@ -128,12 +128,12 @@
 
                                         <div class="cbp-caption">
                                             <div class="cbp-caption-defaultWrap">
-                                                <img src="/image/{{id}}.jpg" alt="foto del proyecto" />
+                                                <img src="/imagep/{{id}}.jpg" alt="foto del proyecto" />
                                             </div>
                                             <div class="cbp-caption-activeWrap">
                                                 <div class="cbp-l-caption-alignCenter">
                                                     <div class="cbp-l-caption-body">
-                                                        <a href=(/project?id={{id}}) class="cbp-l-caption-buttonRight" data-title="Proyecto<br>Fecha lanzamiento">Leer más</a>
+                                                        <a href=/project?id={{id}} class="cbp-l-caption-buttonRight" data-title="Proyecto<br>Fecha lanzamiento">Leer más</a>
                                                     </div>
                                                 </div>
                                             </div>
