--- a/WADWolfram/src/main/resources/templates/register.html
+++ b/WADWolfram/src/main/resources/templates/register.html
@@ -122,12 +122,11 @@
 
                             <hr class="colorgraph">
                             <div class="row">
-                                <div class="col-xs-12 col-md-6">
-                                    <input type="submit" value="Regístrate" class="btn btn-theme btn-block btn-lg" tabindex="7">
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <button type="submit" class="btn btn-primary">Regístrate</button>
                                 </div>
                                 <div class="col-xs-12 col-md-6">¿Tienes ya una cuenta? <a href="/login">¡Entra en tu cuenta!</a></div>
                             </div>
-                        </form>
                     </div>
                 </div>
                 <!-- Modal -->
@@ -146,6 +145,7 @@
                             </div>
                         </div>
                         <!-- /.modal-content -->
+                         </form>
                     </div>
                     <!-- /.modal-dialog -->
                 </div>
