--- a/WADWolfram/src/main/resources/templates/oneProject.html
+++ b/WADWolfram/src/main/resources/templates/oneProject.html
@@ -102,7 +102,7 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div id="profilePhoto">
-                                                <img src="/image/{{id}}.jpg" id="proyectImage" class="img-responsive" />
+                                                <img src="/imagep/{{id}}.jpg" id="proyectImage" class="img-responsive" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
