--- a/WADWolfram/src/main/resources/templates/users.html
+++ b/WADWolfram/src/main/resources/templates/users.html
@@ -166,13 +166,15 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div id="data">
-                                                <div class="form-group">
+                                                <div >
                                                     <label for="exampleInputEmail1">Nombre</label>
-                                                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder={{name}} name="name">
+                                                    <p class="form-control" id="exampleInputEmail1"  name="name">{{name}}</p>
+                                                   
                                                 </div>
-                                                <div class="form-group">
+                                                <div >
                                                     <label for="exampleInputEmail1">Apellidos</label>
-                                                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder={{surname}} name="surname">
+                                                    <p class="form-control" id="exampleInputEmail1"  name="surname">{{surname}}</p>
+                                                  
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="exampleInputEmail1">Dirección Email</label>
@@ -180,7 +182,7 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="exampleInputEmail1">Nombre Usuario</label>
-                                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder={{userName}} name="username">
+                                                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder={{userName}} name="username">
                                                 </div>
 
                                                 <div class="form-group">
