--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
@@ -179,7 +179,7 @@
 									<div class="form-group">
 										<div class="col-sm-offset-2 col-sm-10">
 											<div class="checkbox">
-												<label> <input type="checkbox" name="opened"> Confirmar
+												<label> <input type="checkbox" name="opened" required> Confirmar
 													todos los cambios
 												</label>
 											</div>
