--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/profile.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/profile.html
@@ -101,7 +101,7 @@
 								<label for="inputEmail3" class="col-sm-2 control-label">Nombre</label>
 								<div class="col-sm-10">
 									<input type="text" class="form-control" id="inputEmail3"
-                                                                               placeholder="Nombre" name="mname">
+                                                                               placeholder="Nombre" name="mname" required>
 								</div>
 							</div>
 							<div class="form-group">
@@ -109,7 +109,7 @@
 									electrónico</label>
 								<div class="col-sm-10">
 									<input type="email" class="form-control" id="inputEmail3"
-                                                                               placeholder="ejemplo@dominio.com" name="memail">
+                                                                               placeholder="ejemplo@dominio.com" name="memail" required>
 								</div>
 							</div>
 							<div class="form-group">
@@ -117,7 +117,7 @@
 									antigua</label>
 								<div class="col-sm-10">
 									<input type="password" class="form-control" id="inputEmail3"
-										placeholder="contraseña antigua" name="mpassword">
+										placeholder="contraseña antigua" name="mpassword" required>
 								</div>
 							</div>
 							<div class="form-group">
@@ -125,7 +125,7 @@
 									nueva</label>
 								<div class="col-sm-10">
 									<input type="password" class="form-control" id="inputPassword3"
-                                                                               placeholder="contraseña nueva" name="mnew_password">
+                                                                               placeholder="contraseña nueva" name="mnew_password" required>
 								</div>
 							</div>
 							<div class="form-group">
@@ -133,7 +133,7 @@
 									contraseña</label>
 								<div class="col-sm-10">
 									<input type="password" class="form-control" id="inputPassword3"
-                                                                               placeholder="repetir contraseña" name="mrepeat_password">
+                                                                               placeholder="repetir contraseña" name="mrepeat_password" required>
 								</div>
 							</div>
 
@@ -141,7 +141,7 @@
 							<div class="form-group">
 								<div class="col-sm-offset-2 col-sm-10">
 									<div class="checkbox">
-                                                                            <label> <input type="checkbox" name="mconfirm"> Confirmar
+                                                                            <label> <input type="checkbox" name="mconfirm" required> Confirmar
 											todos los cambios
 										</label>
 									</div>
@@ -162,7 +162,7 @@
 								<label for="inputEmail3" class="col-sm-2 control-label">Nombre</label>
 								<div class="col-sm-10">
 									<input type="text" class="form-control" id="inputEmail3"
-                                                                               placeholder="Nombre" name="name">
+                                                                               placeholder="Nombre" name="name" required>
 								</div>
 							</div>
 							<div class="form-group">
@@ -170,14 +170,14 @@
 									electrónico</label>
 								<div class="col-sm-10">
 									<input type="email" class="form-control" id="inputEmail3"
-                                                                               placeholder="ejemplo@dominio.com" name="email">
+                                                                               placeholder="ejemplo@dominio.com" name="email" required>
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="inputEmail3" class="col-sm-2 control-label">Contraseña</label>
 								<div class="col-sm-10">
 									<input type="password" class="form-control" id="inputEmail3"
-                                                                               placeholder="contraseña" name="password">
+                                                                               placeholder="contraseña" name="password" required>
 								</div>
 							</div>
 							<div class="form-group">
@@ -185,7 +185,7 @@
 									contraseña</label>
 								<div class="col-sm-10">
 									<input type="password" class="form-control" id="inputPassword3"
-										placeholder="repetir contraseña" name="repeat_password">
+										placeholder="repetir contraseña" name="repeat_password" required>
 								</div>
 							</div>
 
@@ -193,7 +193,7 @@
 							<div class="form-group">
 								<div class="col-sm-offset-2 col-sm-10">
 									<div class="checkbox">
-                                                                            <label> <input type="checkbox" name="confirm"> Confirmar
+                                                                            <label> <input type="checkbox" name="confirm" required> Confirmar
 											todos los cambios
 										</label>
 									</div>
