--- a/WADWolfram/src/main/resources/templates/login.html
+++ b/WADWolfram/src/main/resources/templates/login.html
@@ -103,10 +103,10 @@
                             <hr class="colorgraph">
 
                             <div class="form-group">
-                                <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" tabindex="4">
+                                <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" tabindex="4" required>
                             </div>
                             <div class="form-group">
-                                <input type="password" name="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Contraseña" tabindex="4">
+                                <input type="password" name="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Contraseña" tabindex="4" required>
                             </div>
 
                             <div class="row">
