--- a/WADWolfram/src/main/resources/templates/users.html
+++ b/WADWolfram/src/main/resources/templates/users.html
@@ -187,11 +187,11 @@
 
                                                 <div class="form-group">
                                                     <label for="exampleInputPassword1">Antigua Contraseña</label>
-                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder={{oldPassword}} name="oldPassword">
+                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder={{oldPassword}} name="oldPassword" required>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="exampleInputPassword1">Nueva Contraseña</label>
-                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder={{newPassword}} name="newPassword">
+                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder={{newPassword}} name="newPassword" >
                                                 </div>
 
                                                 <button type="submit" class="btn btn-primary btn-lg">Guardar Cambios</button>
