--- a/WADWolfram/src/main/resources/templates/users.html
+++ b/WADWolfram/src/main/resources/templates/users.html
@@ -151,12 +151,13 @@
                                     </div>
                                 </div>
                                 <div class="row hide" id="dataPage">
-                                    <form role="form" class="register-form" action="/users/update" method="post" enctype="multipart/form-data">
-                                         {{#User}}
+                                    {{#User}}
+                                    <form role="form" class="register-form" action="/users/update/{{id}}" method="post" enctype="multipart/form-data">
+                                         
                                         <div class="col-md-6">
                                             <div id="profilePhoto">
 
-                                                <img src="/imageu/{id}.jpg" id="profileIcon" class="img-responsive" />
+                                                <img src="/imageu/{{id}}.jpg" id="profileIcon" class="img-responsive" />
                                                 <div class="form-group">
                                                     <label for="exampleInputFile">Cambiar foto</label>
                                                     <input type="file" id="exampleInputFile" class="center-block" name="imagen">
@@ -178,28 +179,29 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="exampleInputEmail1">Dirección Email</label>
-                                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder={{email}} name="email">
+                                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="{{email}}" name="email">
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="exampleInputEmail1">Nombre Usuario</label>
-                                                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder={{userName}} name="username">
+                                                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="{{userName}}" name="username">
                                                 </div>
 
                                                 <div class="form-group">
                                                     <label for="exampleInputPassword1">Antigua Contraseña</label>
-                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder={{oldPassword}} name="oldPassword" required>
+                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="{{oldPassword}}" name="oldPassword" required>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="exampleInputPassword1">Nueva Contraseña</label>
-                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder={{newPassword}} name="newPassword" >
+                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="{{newPassword}}" name="newPassword" >
                                                 </div>
 
                                                 <button type="submit" class="btn btn-primary btn-lg">Guardar Cambios</button>
                                              
                                             </div>
                                         </div>
-                                         {{/User}}
+                                         
                                     </form>
+                                    {{/User}}
                                 </div>
                             </div>
                         </div>
