more security, doing index and news filters, cleaning too

--- a/WADWolfram/src/main/resources/templates/new_template.html
+++ b/WADWolfram/src/main/resources/templates/new_template.html
@@ -57,7 +57,7 @@
                             <ul class="nav navbar-nav">
                                 <li><a href="/">Inicio</a></li>
                                 <li><a href="/projects">Proyectos </a></li>
-                                <li  class="active"><a href="/blog_template">Noticias </a></li>
+                                <li  class="active"><a href="/blog">Noticias </a></li>
                                 <li><a href="/contact">Contacto </a></li>
                                 <li><a href="/about">Sobre nosotros </a></li>
                                 <li class="dropdown">
@@ -108,7 +108,7 @@
 
                                     <ul class="meta-post">
                                         <li><i class="fa fa-calendar"></i>{{date}}</li>
-                                        <li><i class="fa fa-comments"></i><a href="#">{{number_comments}} Comentarios</a></li>
+                                        <li><i class="fa fa-comments"></i>{{number_comments}} Comentarios</li>
                                     </ul>
 
 
@@ -150,11 +150,11 @@
                                 <div class="widget">
                                     <h3>Categorías</h3>
                                     <ul class="cat">
-                                        <li><i class="fa fa-angle-right"></i><a>Enfermedad</a><span> (2)</span></li>
-                                        <li><i class="fa fa-angle-right"></i><a>Asociación</a><span>(0) </span></li>
-                                        <li><i class="fa fa-angle-right"></i><a>Nuevos descubrimientos</a><span> (0)</span></li>
-                                        <li><i class="fa fa-angle-right"></i><a>Proyectos</a><span> (0)</span></li>
-                                        <li><i class="fa fa-angle-right"></i><a>Próximos eventos</a><span> (1)</span></li>
+                                        <li><i class="fa fa-angle-right"></i>Enfermedad</li>
+                                        <li><i class="fa fa-angle-right"></i>Asociación</li>
+                                        <li><i class="fa fa-angle-right"></i>Nuevos descubrimientos</li>
+                                        <li><i class="fa fa-angle-right"></i>Proyectos</li>
+                                        <li><i class="fa fa-angle-right"></i>Próximos eventos</li>
                                     </ul>
                                 </div>
                                 <div class="widget">
