--- a/WADWolfram/src/main/resources/templates/register.html
+++ b/WADWolfram/src/main/resources/templates/register.html
@@ -122,8 +122,8 @@
 
                             <hr class="colorgraph">
                             <div class="row">
-                                <div class="col-sm-offset-2 col-sm-10">
-                                    <button type="submit" class="btn btn-primary">Regístrate</button>
+                                <div class="col-xs-12 col-md-6">
+                                    <button type="submit" class="btn btn-primary btn-block btn-lg">Regístrate</button>
                                 </div>
                                 <div class="col-xs-12 col-md-6">¿Tienes ya una cuenta? <a href="/login">¡Entra en tu cuenta!</a></div>
                             </div>
