--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
@@ -37,18 +37,7 @@
 						</h1>
 					</div>
 				</div>
-				<!--<div class="col-md-5">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="input-group form">
-                                    <input type="text" class="form-control" placeholder="Search...">
-                                    <span class="input-group-btn">
-                                     <button class="btn btn-primary" type="button">Search</button>
-                                   </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
+			
 				<div class="col-md-2 col-sm-2 col-xs-2" style="margin-left: 180px">
 					<div class="navbar navbar-inverse " role="banner ">
 						<ul class="nav navbar-nav ">
@@ -95,7 +84,7 @@
 				<!--Page Content-->
 				<div class="row ">
 					<div class="col-md-12 ">
-						<h1>Bienvenido Admin</h1>
+						<h1>Bienvenid@ admin</h1>
 					</div>
 				</div>
 				<div class="content-box-large ">
