--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/profile.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/profile.html
@@ -37,18 +37,6 @@
 						</h1>
 					</div>
 				</div>
-				<!--<div class="col-md-5">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="input-group form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-	                         <button class="btn btn-primary" type="button">Search</button>
-	                       </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>-->
 				<div class="col-md-2 col-sm-2 col-xs-2" style="margin-left: 180px">
 					<div class="navbar navbar-inverse " role="banner ">
 						<ul class="nav navbar-nav ">
@@ -96,12 +84,12 @@
 				<div class="row">
 					<div class="col-md-6">
 						<h4>Modifica tu cuenta</h4>
-                                                <form class="form-horizontal" id="form-horizontal2" role="form" action="/admin/Profile/update">
+                                                <form class="form-horizontal" id="form-horizontal2" role="form" action="/admin/Profile/update" method="post">
+							 {{#User}}
 							<div class="form-group">
 								<label for="inputEmail3" class="col-sm-2 control-label">Nombre</label>
 								<div class="col-sm-10">
-									<input type="text" class="form-control" id="inputEmail3"
-                                                                               placeholder="Nombre" name="mname" required>
+									<input class="form-control" id="inputEmail3" name="mname"> {{name}} </>
 								</div>
 							</div>
 							<div class="form-group">
@@ -109,7 +97,7 @@
 									electrónico</label>
 								<div class="col-sm-10">
 									<input type="email" class="form-control" id="inputEmail3"
-                                                                               placeholder="ejemplo@dominio.com" name="memail" required>
+                                                                               placeholder="ejemplo@dominio.com" name="memail">
 								</div>
 							</div>
 							<div class="form-group">
@@ -125,7 +113,7 @@
 									nueva</label>
 								<div class="col-sm-10">
 									<input type="password" class="form-control" id="inputPassword3"
-                                                                               placeholder="contraseña nueva" name="mnew_password" required>
+                                                                               placeholder="contraseña nueva" name="mnew_password">
 								</div>
 							</div>
 							<div class="form-group">
@@ -153,6 +141,7 @@
 										datos</button>
 								</div>
 							</div>
+							 {{/User}}
 						</form>
 					</div>
 					<div class="col-md-6">
