--- a/WADWolfram/src/main/resources/templates/blog_template.html
+++ b/WADWolfram/src/main/resources/templates/blog_template.html
@@ -108,15 +108,15 @@
                                         <div class="post-heading">
                                             <h3><a href=/new?id={{id}}>{{title}}</a></h3>
                                         </div>
-                                        <a href=/new?id={{id}}><img src="/image/{{id}}.jpg" alt="Foto de la noticia" class="img-responsive" /></a>
-                                         <div><a>{{cuerpo}}</a></div>
+                                  <a href=/new?id={{id}}><img src="/image/{{id}}.jpg" alt="Foto de la noticia" class="img-responsive" /></a>
+                                      <!--   <div><a>{{cuerpo}}</a></div>  --> 
                                     </div>
                                     <div class="bottom-article">
                                         <ul class="meta-post">
-                                            <li><i class="fa fa-calendar"></i><a>{{date}}</a></li>
-                                            <li><i class="fa fa-comments"></i><a>{{number_comments}} Comentarios</a></li>
+                                            <li><i class="fa fa-calendar"></i>{{date}}</li>
+                                            <li><i class="fa fa-comments"></i>{{number_comments}} Comentarios</li>
                                         </ul>
-                                       <a href=/new?id={{id}} class="readmore pull-right">Continuar leyendo <i class="fa fa-angle-right"></i></a>
+                                       <a href=/new?id={{id}} class="readmore pull-right">Ir a la noticia <i class="fa fa-angle-right"></i></a>
                                     </div>
                                 </li>
 
@@ -138,11 +138,11 @@
                             <div class="widget">
                                 <h5 class="widgetheading">Categorías</h5>
                                 <ul class="cat">
-                                    <li><i class="fa fa-angle-right"></i><a href="#sindromeWolfram">Enfermedad</a><span> (2)</span></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="#">Asociación</a><span> (0)</span></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="#">Nuevos descubrimientos</a><span> (0)</span></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="#">Proyectos</a><span> (0)</span></li>
-                                    <li><i class="fa fa-angle-right"></i><a href="#actividades">Próximos eventos</a><span> (1)</span></li>
+                                    <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=enfermedad>Enfermedad</a></li>
+                                    <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=Asociacion>Asociación</a></li>
+                                    <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=NuevosDescubrimientos>Nuevos descubrimientos</a></li>
+                                    <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=Proyectos>Proyectos</a></li>
+                                    <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=PróximosEventos>Próximos eventos</a></li>
                                 </ul>
                             </div>
                             <div class="widget">
