--- a/WADWolfram/src/main/resources/templates/index_template.html
+++ b/WADWolfram/src/main/resources/templates/index_template.html
@@ -77,12 +77,12 @@
                             <ul class="slides">
                                 {{#projects}}
                                 <li>
-                                    <img src={{image}} alt="Foto del proyecto" />
+                                    <img src="/imagep/{{id}}.jpg" alt="Foto del proyecto" />
                                     <div class="flex-caption">
                                         <h3>{{title}}</h3>
                                         <p>{{shorDescription}}</p>
                                         <!--cambiar lo de arriba-->
-                                        <a href=(/Project?id={{id}}) class="btn btn-theme">Leer más</a>
+                                        <a href="/project?id={{id}}" class="btn btn-theme">Leer más</a>
                                     </div>
                                 </li>
 
@@ -103,7 +103,7 @@
                             <div class="col-sm-6 col-lg-6">
                                 <h4>Sobre nuestra asociación</h4>
                                 <p>
-                                    Bienvenido a la página web donde podrás hacer tu aportación económica a proyectos médicos dirigidos a personas que padecen el Síndrome de Wolfram. Además, podrás hacer un seguimiento general de todos los proyectos y, por supuesto, de aquellos en los que has aportado. Regístrate de manera gratuíta para poder contribuir con la asociación. Para más información haz <a href="about.html">click aquí</a>.
+                                    Bienvenido a la página web donde podrás hacer tu aportación económica a proyectos médicos dirigidos a personas que padecen el Síndrome de Wolfram. Además, podrás hacer un seguimiento general de todos los proyectos y, por supuesto, de aquellos en los que has aportado. Regístrate de manera gratuíta para poder contribuir con la asociación. Para más información haz <a href="/about">click aquí</a>.
                                 </p>
                                 <br/>
 
@@ -124,8 +124,8 @@
                                     <ul class="recent">
                                         {{#news}}
                                         <li>
-                                            <a href=(/new?id={{id}})> <img src={{image}} class="pull-left" alt="Foto de la noticia" /></a>
-                                            <h6><a href=(/new?id={{id}})>{{title}}</a></h6>
+                                            <a href="/new?id={{id}}"> <img src="/image/{{id}}.jpg" class="pull-left" alt="Foto de la noticia" /></a>
+                                            <h6><a href="/new?id={{id}}">{{title}}</a></h6>
                                         </li>
                                         {{/news}}
 
@@ -182,12 +182,7 @@
                     <div class="col-sm-3 col-lg-3">
                         <div class="widget">
                             <h4>Idioma</h4>
-                            <!--   <div class="form-group multiple-form-group input-group">
-                        <input type="email" name="email" class="form-control">
-                        <span class="input-group-btn">
-                            <button type="button" class="btn btn-theme btn-add">Subscribe</button>
-                        </span>
-                    </div>  -->
+                        
                         </div>
                     </div>
                 </div>
