Admin profile update. /admin/ for admin index

--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
@@ -65,7 +65,7 @@
 					<!-- Logo -->
 					<div data-brackets-id='138' class="logo">
 						<h1 data-brackets-id='139'>
-							<a data-brackets-id='140' href="/admin/Index">Admin WAD
+							<a data-brackets-id='140' href="/admin/">Admin WAD
 								Wolfram</a>
 						</h1>
 					</div>
@@ -84,7 +84,7 @@
 									<li data-brackets-id='148'><a data-brackets-id='149'
 										href="/admin/Profile">Perfil</a></li>
 									<li data-brackets-id='150'><a data-brackets-id='151'
-										href="/login">Cerrar sesión</a></li>
+										href="/user/close">Cerrar sesión</a></li>
 								</ul></li>
 						</ul>
 					</div>
@@ -101,7 +101,7 @@
 					<ul data-brackets-id='156' class="nav ">
 						<!-- Main menu -->
 						<li data-brackets-id='157'><a data-brackets-id='158'
-							href="/admin/Index"><i data-brackets-id='159'
+							href="/admin/"><i data-brackets-id='159'
 								class="glyphicon glyphicon-home "></i> Inicio</a></li>
 						<li data-brackets-id='160'><a data-brackets-id='161'
 							href="/admin/AddProject"><i data-brackets-id='162'
@@ -122,7 +122,7 @@
 								<li data-brackets-id='174'><a data-brackets-id='175'
 									href="/admin/Profile">Perfil</a></li>
 								<li data-brackets-id='176'><a data-brackets-id='177'
-									href="/login">Cerrar sesión</a></li>
+									href="/user/close">Cerrar sesión</a></li>
 							</ul></li>
 					</ul>
 				</div>
@@ -219,7 +219,7 @@
 		<div data-brackets-id='225' class="container ">
 
 			<div data-brackets-id='226' class="copy text-center ">
-				WAD Wolfram <a data-brackets-id='227' href='/login'>Cerrar
+				WAD Wolfram <a data-brackets-id='227' href='/user/close'>Cerrar
 					sesión</a>
 			</div>
 
