--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/addproject.html
@@ -37,7 +37,7 @@
 					<!-- Logo -->
 					<div class="logo">
 						<h1>
-							<a href="/admin/Index">Admin WAD Wolfram</a>
+							<a href="/admin/">Admin WAD Wolfram</a>
 						</h1>
 					</div>
 				</div>
@@ -48,7 +48,7 @@
 								data-toggle="dropdown">Mi cuenta <b class="caret"></b></a>
 								<ul class="dropdown-menu animated fadeInUp">
 									<li><a href="/admin/Profile">Perfil</a></li>
-									<li><a href="/login">Cerrar sesión</a></li>
+									<li><a href="/user/close">Cerrar sesión</a></li>
 								</ul></li>
 						</ul>
 					</div>
@@ -63,7 +63,7 @@
 				<div class="sidebar content-box " style="display: block;">
 					<ul class="nav ">
 						<!-- Main menu -->
-						<li><a href="/admin/Index"><i
+						<li><a href="/admin/"><i
 								class="glyphicon glyphicon-home "></i> Inicio</a></li>
 						<li class="current"><a href="/admin/AddProject"><i
 								class="glyphicon glyphicon-pencil "></i>Añadir Proyecto</a></li>
@@ -77,7 +77,7 @@
 						</a> <!-- Sub menu -->
 							<ul>
 								<li><a href="/admin/Profile">Perfil</a></li>
-								<li><a href="/login">Cerrar sesión</a></li>
+								<li><a href="/user/close">Cerrar sesión</a></li>
 							</ul></li>
 					</ul>
 				</div>
@@ -261,7 +261,7 @@
 		<div class="container ">
 
 			<div class="copy text-center ">
-				WAD Wolfram <a href='/login'>Cerrar sesión</a>
+				WAD Wolfram <a href='/user/close'>Cerrar sesión</a>
 			</div>
 
 		</div>
