--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
@@ -33,7 +33,7 @@
 					<!-- Logo -->
 					<div class="logo">
 						<h1>
-							<a href="/admin/Index">Admin WAD Wolfram</a>
+							<a href="/admin/">Admin WAD Wolfram</a>
 						</h1>
 					</div>
 				</div>
@@ -45,7 +45,7 @@
 								data-toggle="dropdown">Mi cuenta <b class="caret"></b></a>
 								<ul class="dropdown-menu animated fadeInUp">
 									<li><a href="/admin/Profile">Perfil</a></li>
-									<li><a href="/login">Cerrar sesión</a></li>
+									<li><a href="/user/close">Cerrar sesión</a></li>
 								</ul></li>
 						</ul>
 					</div>
@@ -60,7 +60,7 @@
 				<div class="sidebar content-box " style="display: block;">
 					<ul class="nav ">
 						<!-- Main menu -->
-						<li class="current"><a href="/admin/Index"><i
+						<li class="current"><a href="/admin/"><i
 								class="glyphicon glyphicon-home "></i> Inicio</a></li>
 						<li><a href="/admin/AddProject"><i
 								class="glyphicon glyphicon-pencil "></i> Añadir Proyecto</a></li>
@@ -74,7 +74,7 @@
 						</a> <!-- Sub menu -->
 							<ul>
 								<li><a href="/admin/Profile">Perfil</a></li>
-								<li><a href="/login">Cerrar sesión</a></li>
+								<li><a href="/user/close">Cerrar sesión</a></li>
 							</ul></li>
 					</ul>
 				</div>
@@ -84,7 +84,7 @@
 				<!--Page Content-->
 				<div class="row ">
 					<div class="col-md-12 ">
-						<h1>Bienvenid@ admin</h1>
+						<h1>Bienvenid@ {{vienbenido}}</h1>
 					</div>
 				</div>
 				<div class="content-box-large ">
@@ -116,7 +116,7 @@
 		<div class="container ">
 
 			<div class="copy text-center ">
-				WAD Wolfram <a href='/login'>Cerrar sesión</a>
+				WAD Wolfram <a href='/user/close'>Cerrar sesión</a>
 			</div>
 
 		</div>
