--- a/WADWolfram/src/main/resources/templates/pay.html
+++ b/WADWolfram/src/main/resources/templates/pay.html
@@ -29,7 +29,6 @@
     <div id="wrapper">
         <!-- start header -->
         <header>
-            <nav>
                 <div class="navbar navbar-default navbar-static-top">
                     <div class="container">
                         <div class="navbar-header">
@@ -40,8 +39,8 @@
                         </div>
                         <div class="navbar-collapse collapse ">
                             <ul class="nav navbar-nav">
-                                <li class="active"><a href="/">Inicio</a></li>
-                                <li><a href="/projects">Proyectos</a></li>
+                                <li><a href="/">Inicio</a></li>
+                                <li class="active"><a href="/projects">Proyectos</a></li>
 
                                 <li><a href="/blog">Noticias</a></li>
                                 <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
@@ -60,7 +59,23 @@
                         </div>
                     </div>
                 </div>
-            </nav>
+             <section id="inner-headline">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <ul class="breadcrumb">
+                                <li><a href="/"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                                <li href="/porjects">Proyectos</li>
+                                <li href="/porject">Proyecto</li>
+                                <li >Donación</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
+            
+            
         </header>
         <!-- end header -->
 
@@ -71,23 +86,23 @@
 
                         <div id="data">
                             {{#User}}
-                            <div class="form-group">
+                            <div >
                                 <label for="exampleInputEmail1">Nombre</label>
-                                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="{{name}}">
+                                <input readonly class="form-control" id="exampleInputEmail1" placeholder="{{name}}">
                             </div>
-                            <div class="form-group">
+                            <div>
                                 <label for="exampleInputEmail1">Apellidos</label>
-                                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="{{surname}}">
+                                <input readonly class="form-control" id="exampleInputEmail1" placeholder="{{surname}}">
                             </div>
                             {{/User}}
                             <div class="form-group">
                                 <label for="creditCard">Tarjeta de crédito</label>
-                                <input type="text" class="form-control" id="creditCard" placeholder="Número de tarjeta">
+                                <input maxlength="16" type="number" class="form-control" id="creditCard" placeholder="Número de tarjeta" required>
                             </div>
                             <div class="form-group">
                                 <label class="control-label" for="expiry-month">Fecha Expiración</label>
 
-                                <select name="expiry-month" class="form-control " id="expiry-month">
+                                <select name="expiry-month" class="form-control " id="expiry-month" required>
                                     <option>Mes</option>
                                     <option value="01">Enero (01)</option>
                                     <option value="02">Febrero (02)</option>
@@ -103,7 +118,7 @@
                                     <option value="12">Diciembre (12)</option>
                                 </select>
                                 <br>
-                                <select name="expiry-year" class="form-control">
+                                <select name="expiry-year" class="form-control" required>
                                     <option value="17">2017</option>
                                     <option value="18">2018</option>
                                     <option value="19">2019</option>
@@ -115,14 +130,14 @@
                             </div>
                             <div class="form-group">
                                 <label for="csv">Número de seguridad</label>
-                                <input type="text" class="form-control" id="csv" placeholder="CSV">
+                                <input maxlength="3" type="number" class="form-control" id="csv" placeholder="CSV" required>
                             </div>
                             <div class="form-group">
                                 <label for="quantity">Donación</label>
-                                <input type="password" class="form-control" id="quantity" placeholder="Cantidad">
+                                <input type="number" class="form-control" id="quantity" placeholder="Cantidad: 0,00€" required>
                             </div>
 
-                            <button type="button" class="btn btn-primary btn-lg">Realizar Pago</button>
+                            <button type="submit" class="btn btn-primary btn-lg">Realizar Pago</button>
                         </div>
                     </div>
                 </div>
@@ -172,12 +187,7 @@
                     <div class="col-sm-3 col-lg-3">
                         <div class="widget">
                             <h4>Idioma</h4>
-                            <!--   <div class="form-group multiple-form-group input-group">
-                        <input type="email" name="email" class="form-control">
-                        <span class="input-group-btn">
-                            <button type="button" class="btn btn-theme btn-add">Subscribe</button>
-                        </span>
-                    </div>  -->
+                     
                         </div>
                     </div>
                 </div>
