--- a/WADWolfram/src/main/resources/templates/users.html
+++ b/WADWolfram/src/main/resources/templates/users.html
@@ -106,7 +106,7 @@
                             </nav>
 
                             <div class="inside">
-                                <h1>¡Bienvenido {{username}}!</h1>
+                                <h1>¡Bienvenid@ {{username}}!</h1>
                                 <div class="row show" id="userProjects">
                                     <div class="col-md-6">
                                         <ul class="list-group">
@@ -169,12 +169,12 @@
                                             <div id="data">
                                                 <div >
                                                     <label for="exampleInputEmail1">Nombre</label>
-                                                    <p class="form-control" id="exampleInputEmail1"  name="name">{{name}}</p>
+                                                    <input readonly class="form-control" id="exampleInputEmail1" placeholder="{{name}}" name="name">
                                                    
                                                 </div>
                                                 <div >
                                                     <label for="exampleInputEmail1">Apellidos</label>
-                                                    <p class="form-control" id="exampleInputEmail1"  name="surname">{{surname}}</p>
+                                                    <input readonly class="form-control" id="exampleInputEmail1"  name="surname" placeholder="{{surname}}">
                                                   
                                                 </div>
                                                 <div class="form-group">
@@ -188,11 +188,11 @@
 
                                                 <div class="form-group">
                                                     <label for="exampleInputPassword1">Antigua Contraseña</label>
-                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="{{oldPassword}}" name="oldPassword" required>
+                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña" name="oldPassword" required>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="exampleInputPassword1">Nueva Contraseña</label>
-                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="{{newPassword}}" name="newPassword" >
+                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña nueva" name="newPassword" >
                                                 </div>
 
                                                 <button type="submit" class="btn btn-primary btn-lg">Guardar Cambios</button>
