Admin donations shown

--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
@@ -168,44 +168,15 @@
 								</tr>
 							</thead>
 							<tbody data-brackets-id='193'>
+                                                            {{#donaciones}}
 								<tr data-brackets-id='194' class="odd gradeX">
-									<td data-brackets-id='195'>Proyecto 1</td>
-									<td data-brackets-id='196'>Usuario 1</td>
-									<td data-brackets-id='197'>30</td>
-									<td data-brackets-id='198'>2016/11/04</td>
+									<td data-brackets-id='195'>{{project.title}}</td>
+									<td data-brackets-id='196'>{{user.userName}}</td>
+									<td data-brackets-id='197'>{{money}}</td>
+									<td data-brackets-id='198'>{{date}}</td>
 
 								</tr>
-								<tr data-brackets-id='199' class="even gradeC">
-									<td data-brackets-id='200'>Proyecto 1</td>
-									<td data-brackets-id='201'>Usuario 2</td>
-									<td data-brackets-id='202'>55</td>
-									<td data-brackets-id='203'>2016/12/12</td>
-								</tr>
-								<tr data-brackets-id='204' class="odd gradeA">
-									<td data-brackets-id='205'>Proyecto 2</td>
-									<td data-brackets-id='206'>Usuario 1</td>
-									<td data-brackets-id='207'>78</td>
-									<td data-brackets-id='208'>2016/08/14</td>
-								</tr>
-								<tr data-brackets-id='209' class="even gradeA">
-									<td data-brackets-id='210'>Proyecto 3</td>
-									<td data-brackets-id='211'>Usuario 2</td>
-									<td data-brackets-id='212'>55</td>
-									<td data-brackets-id='213'>2017/01/07</td>
-								</tr>
-								<tr data-brackets-id='214' class="odd gradeA">
-									<td data-brackets-id='215'>Proyecto 4</td>
-									<td data-brackets-id='216'>Usuario 3</td>
-									<td data-brackets-id='217'>116</td>
-									<td data-brackets-id='218'>2016/10/23</td>
-								</tr>
-								<tr data-brackets-id='219' class="even gradeA">
-									<td data-brackets-id='220'>Proyecto 4</td>
-									<td data-brackets-id='221'>Usuario 1</td>
-									<td data-brackets-id='222'>130</td>
-									<td data-brackets-id='223'>2016/10/31</td>
-
-								</tr>
+                                                                {{/donaciones}}
 							</tbody>
 						</table>
 					</div>
