categories filter, some links

--- a/WADWolfram/src/main/resources/templates/blog_template.html
+++ b/WADWolfram/src/main/resources/templates/blog_template.html
@@ -138,8 +138,8 @@
                             <div class="widget">
                                 <h5 class="widgetheading">Categorías</h5>
                                 <ul class="cat">
-                                    <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=enfermedad>Enfermedad</a></li>
-                                    <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=Asociacion>Asociación</a></li>
+                                    <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=Enfermedad>Enfermedad</a></li>
+                                    <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=Asociación>Asociación</a></li>
                                     <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=NuevosDescubrimientos>Nuevos descubrimientos</a></li>
                                     <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=Proyectos>Proyectos</a></li>
                                     <li><i class="fa fa-angle-right"></i><a href=/mostrarPorCategoria?categoria=PróximosEventos>Próximos eventos</a></li>
