--- a/WADWolfram/src/main/resources/templates/contact.html
+++ b/WADWolfram/src/main/resources/templates/contact.html
@@ -98,9 +98,9 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h2 style="color:white;">Contáctanos <small style="color:white;">rellena los campos</small></h2>
                         <hr class="colorgraph">
-                        <div id="sendmessage">YSe ha enviado tu mensaje. ¡Gracias!</div>
+                        <div id="sendmessage">Se ha enviado tu mensaje. ¡Gracias!</div>
                         <div id="errormessage"></div>
-                        <form action="" method="post" role="form" class="contactForm">
+                        <form action="/error" method="post" role="form" class="contactForm">
                             <div class="form-group">
                                 <input type="text" name="name" class="form-control" id="name" placeholder="Tu nombre" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
                                 <div class="validation"></div>
